# CMake-library-combiner

./: .gitignore  CMakeLists.txt  README.md  a.cpp  a.h  b.cpp  b.h  main.cpp
